<!-- activity_store.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16dp">

        <EditText
            android:id="@+id/productNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_product" />

        <EditText
            android:id="@+id/productPriceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal" />
        <EditText
            android:id="@+id/productDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/productImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedCornersImageView"/>

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <ListView
            android:id="@+id/productListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>
</LinearLayout>
