<!-- activity_product_detail.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/productDetailImageView"
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_height="@dimen/_300dp"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/RoundedCornersImageView"/>


        <EditText
            android:id="@+id/productDetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameChanged"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/productDetailPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priceChanged"
            android:inputType="numberDecimal"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/productDetailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descriptionChanged"
            android:textSize="@dimen/_18sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>
